fixed whitespace on the front page

--- a/src/index.css
+++ b/src/index.css
@@ -298,12 +298,8 @@ input {
   display: inline-block;
 }
 
-.products {
-  margin-top: 7rem;
-}
-
 .product {
-  margin-bottom: 3.5rem;
+  margin-bottom: 1rem;
 }
 
 .product-details {
